# BIUProject2

./: AStar.cpp  AStar.h  ArgumentsForOpenServer.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.h  ISearcher.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PQSearcher.h  README.md  SearchableMatrix.cpp  SearchableMatrix.h  Server.h  Solver.h  SolverToSearcherAdapter.h  State.h  StateComparatorLesser.h  StringReverser.cpp  StringReverser.h  main.cpp
